// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Synthetics JavaScript formatter accepts custom step organization 1`] = `
"const { journey, step, expect } = require('@elastic/synthetics');

journey('Recorded journey', async ({ page, context }) => {
  let page1;
  step('Open new page', async () => {
    await page.goto('https://vigneshh.in/');
  });
  step('Assert text=Babel Minify isVisible', async () => {
    expect(await page.isVisible('text=Babel Minify')).toBeTruthy();
    expect(await page.isEditable('text=Babel Minify')).toBeTruthy();
  });
  step('Assert text=Babel Minify textContent', async () => {
    expect(await page.textContent('text=Babel Minify')).toMatch('Babel');
    [page1] = await Promise.all([
      page.waitForEvent('popup'),
      page.getByText('Babel Minify').click()
    ]);
    await page1.locator('a:has-text(\\"smoke\\")').click();
    expect(page1.url()).toContain('https://github.com/babel/minify/tree/master/smoke');
  });
  step('Close page', async () => {
    await page1.close();
  });
});"
`;

exports[`Synthetics JavaScript formatter does not hoist when all accesses are in one step 1`] = `
"let page1;
let page2;
step('Go to https://vigneshh.in/', async () => {
  await page.goto('https://vigneshh.in/');
  [page1] = await Promise.all([
    page.waitForEvent('popup'),
    page.getByText('Tailor').click()
  ]);
  await page1.getByText('Packages 0').click();
  expect(page1.url()).toContain('https://github.com/orgs/zalando/packages');
  await page1.close();
  [page2] = await Promise.all([
    page.waitForEvent('popup'),
    page.getByText('Babel Minify').click()
  ]);
  await page2.close();
});"
`;

exports[`Synthetics JavaScript formatter hoist accounts for popup alias 1`] = `
"let page1;
let page2;
step('Go to https://vigneshh.in/', async () => {
  await page.goto('https://vigneshh.in/');
  [page1] = await Promise.all([
    page.waitForEvent('popup'),
    page.getByText('Tailor').click()
  ]);
  await page1.getByText('Packages 0').click();
  expect(page1.url()).toContain('https://github.com/orgs/zalando/packages');
});
step('Close page', async () => {
  await page1.close();
  [page2] = await Promise.all([
    page.waitForEvent('popup'),
    page.getByText('Babel Minify').click()
  ]);
});
step('Close page', async () => {
  await page2.close();
});"
`;

exports[`Synthetics JavaScript formatter hoists page objects to prevent undefined references 1`] = `
"let page1;
let page2;
step('Go to https://vigneshh.in/', async () => {
  await page.goto('https://vigneshh.in/');
  [page1] = await Promise.all([
    page.waitForEvent('popup'),
    page.getByText('Tailor').click()
  ]);
  await page1.getByText('Packages 0').click();
  expect(page1.url()).toContain('https://github.com/orgs/zalando/packages');
});
step('Close page', async () => {
  await page1.close();
});
step('Click text=Babel Minify', async () => {
  [page2] = await Promise.all([
    page.waitForEvent('popup'),
    page.getByText('Babel Minify').click()
  ]);
  await page2.locator(':nth-match(a:has-text(\\"babel-minify\\"), 3)').click();
  expect(page2.url()).toContain('https://github.com/topics/babel-minify');
});
step('Close page', async () => {
  await page2.close();
});"
`;

exports[`Synthetics JavaScript formatter uses custom step names 1`] = `
"step('test-name', async () => {
  await page.goto('https://vigneshh.in/');
  expect(await page.isVisible('text=Babel Minify')).toBeTruthy();
  expect(await page.isEditable('text=Babel Minify')).toBeTruthy();
});"
`;
